Add webjars + a root index page

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     compile('org.springframework.boot:spring-boot-starter-web')
     compile("org.springframework.boot:spring-boot-starter-actuator")
+    compile('org.webjars:bootstrap:4.0.0-beta.2')
+    compile('org.webjars:jquery:3.2.1')
+    compile('org.webjars.npm:popper.js:1.12.5')
     runtime('org.springframework.boot:spring-boot-devtools')
     runtime('com.h2database:h2')
     testCompile('org.springframework.boot:spring-boot-starter-test')
