--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-endpoints.sensitive=false
+spring.datasource.platform=postgresql
+spring.datasource.url=jdbc:postgresql://localhost/library
+spring.datasource.username=library
+#spring.datasource.platform=h2
