--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile('org.webjars:jquery:3.2.1')
     compile('org.webjars.npm:popper.js:1.12.5')
     compile('org.postgresql:postgresql:42.1.4')
+    compile('org.flywaydb:flyway-core')
     runtime('org.springframework.boot:spring-boot-devtools')
     runtime('com.h2database:h2')
     testCompile('org.springframework.boot:spring-boot-starter-test')
