--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.datasource.platform=postgresql
 spring.datasource.url=jdbc:postgresql://localhost/library
 spring.datasource.username=library
+flyway.placeholders.autoincrement=SERIAL
+
 #spring.datasource.platform=h2
+#flyway.placeholders.autoincrement=IDENTITY
+
