--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
 spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
