--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-jdbc')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-security')
+    compile('org.thymeleaf.extras:thymeleaf-extras-springsecurity4')
     compile('org.webjars:bootstrap:4.0.0-beta.2')
     compile('org.webjars:jquery:3.2.1')
     compile('org.webjars.npm:popper.js:1.12.5')
